--- a/files/index/styles.css
+++ b/files/index/styles.css
@@ -1,9 +1,10 @@
 ﻿body {
   margin:0px;
+  background-color:rgba(79, 149, 255, 1);
   background-image:none;
   position:static;
   left:auto;
-  width:1140px;
+  width:1217px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -16,31 +17,28 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:1110px;
-  height:1000px;
+  width:1165px;
+  height:632px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
-  box-sizing:border-box;
-  border-width:4px;
-  border-style:solid;
-  border-color:rgba(121, 121, 121, 1);
-  border-radius:0px;
+  border:none;
+  border-radius:20px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
 }
 #u0 {
   position:absolute;
-  left:30px;
-  top:30px;
-  width:1110px;
-  height:1000px;
+  left:52px;
+  top:47px;
+  width:1165px;
+  height:632px;
 }
 #u1 {
   position:absolute;
   left:2px;
-  top:492px;
-  width:1106px;
+  top:308px;
+  width:1161px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -48,8 +46,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:400px;
-  height:48px;
+  width:193px;
+  height:37px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -57,26 +55,350 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'思源黑体 CN ExtraLight', '思源黑体 CN';
-  font-weight:100;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
   font-style:normal;
-  text-align:center;
+  color:#4F95FF;
 }
 #u2 {
   position:absolute;
-  left:400px;
-  top:62px;
-  width:400px;
-  height:48px;
-  font-family:'思源黑体 CN ExtraLight', '思源黑体 CN';
-  font-weight:100;
+  left:549px;
+  top:82px;
+  width:193px;
+  height:37px;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
   font-style:normal;
-  text-align:center;
+  color:#4F95FF;
 }
 #u3 {
   position:absolute;
   left:0px;
   top:0px;
-  width:400px;
+  width:193px;
+  white-space:nowrap;
+}
+#u4_img {
+  position:absolute;
+  left:-1px;
+  top:-1px;
+  width:1168px;
+  height:6px;
+}
+#u4 {
+  position:absolute;
+  left:52px;
+  top:129px;
+  width:1165px;
+  height:3px;
+}
+#u5 {
+  position:absolute;
+  left:2px;
+  top:-6px;
+  width:1161px;
+  visibility:hidden;
   word-wrap:break-word;
+}
+#u6 {
+  position:absolute;
+  left:503px;
+  top:238px;
+  width:300px;
+  height:25px;
+}
+#u6_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u7 {
+  position:absolute;
+  left:503px;
+  top:273px;
+  width:300px;
+  height:25px;
+}
+#u7_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u8_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:29px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'黑体 Regular', '黑体';
+  font-weight:400;
+  font-style:normal;
+}
+#u8 {
+  position:absolute;
+  left:454px;
+  top:243px;
+  width:29px;
+  height:16px;
+  font-family:'黑体 Regular', '黑体';
+  font-weight:400;
+  font-style:normal;
+}
+#u9 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:29px;
+  white-space:nowrap;
+}
+#u10_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:29px;
+  height:17px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'黑体 Regular', '黑体';
+  font-weight:400;
+  font-style:normal;
+}
+#u10 {
+  position:absolute;
+  left:454px;
+  top:277px;
+  width:29px;
+  height:17px;
+  font-family:'黑体 Regular', '黑体';
+  font-weight:400;
+  font-style:normal;
+}
+#u11 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:29px;
+  white-space:nowrap;
+}
+#u12_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:216px;
+  height:58px;
+}
+#u12 {
+  position:absolute;
+  left:813px;
+  top:227px;
+  width:206px;
+  height:48px;
+  font-family:'黑体 Regular', '黑体';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u13 {
+  position:absolute;
+  left:2px;
+  top:17px;
+  width:202px;
+  word-wrap:break-word;
+}
+#u14_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:216px;
+  height:58px;
+}
+#u14 {
+  position:absolute;
+  left:813px;
+  top:262px;
+  width:206px;
+  height:48px;
+  font-family:'黑体 Regular', '黑体';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u15 {
+  position:absolute;
+  left:2px;
+  top:17px;
+  width:202px;
+  word-wrap:break-word;
+}
+#u16_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(22, 155, 213, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u16 {
+  position:absolute;
+  left:503px;
+  top:335px;
+  width:140px;
+  height:40px;
+}
+#u17 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:136px;
+  word-wrap:break-word;
+}
+#u18_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:20px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u18 {
+  position:absolute;
+  left:503px;
+  top:385px;
+  width:70px;
+  height:20px;
+}
+#u19 {
+  position:absolute;
+  left:2px;
+  top:2px;
+  width:66px;
+  white-space:nowrap;
+}
+#u20_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(22, 155, 213, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u20 {
+  position:absolute;
+  left:663px;
+  top:335px;
+  width:140px;
+  height:40px;
+}
+#u21 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:136px;
+  word-wrap:break-word;
+}
+#u22 {
+  position:absolute;
+  left:503px;
+  top:309px;
+  width:70px;
+  height:16px;
+  font-family:'黑体 Regular', '黑体';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  text-align:center;
+}
+#u23 {
+  position:absolute;
+  left:16px;
+  top:0px;
+  width:52px;
+  word-wrap:break-word;
+}
+#u22_input {
+  position:absolute;
+  left:-3px;
+  top:-2px;
+}
+#u24_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:26px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+  color:#CCCCCC;
+}
+#u24 {
+  position:absolute;
+  left:587px;
+  top:309px;
+  width:133px;
+  height:26px;
+  font-size:12px;
+  color:#CCCCCC;
+}
+#u25 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  white-space:nowrap;
 }
